--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -24,6 +25,8 @@
         <activity
             android:name=".activities.Settings"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".activities.Setup"
+                  android:label="@string/app_name" />
     </application>
 
 </manifest>
