--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.github.paolorotolo:appintro:3.3.0'
+    compile 'com.google.android.gms:play-services:8.4.0'
 }
