--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.github.paolorotolo:appintro:3.3.0'
     compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.0'
 }
