--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,8 @@
 <manifest
     package="com.aquamorph.frcmanager"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,15 +23,15 @@
         <activity
             android:name=".activities.Settings"
             android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".activities.Setup"
+            android:label="@string/app_name"
+            android:theme="@style/Setup">
             <intent-filter>
                 <action android:name="com.aquamorph.frcmanager.activities.Setup"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activities.Setup"
-            android:label="@string/app_name"
-            android:theme="@style/Setup"/>
     </application>
-
 </manifest>
