--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,8 @@ os: windows
 android:
   components:
     # The BuildTools version used by your project
+    - tools
     - build-tools-23.0.2
-
-    # The SDK version used to compile your project
     - android-23
 
     # Additional components
