--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
         <activity
             android:name=".activities.Settings"
-            android:theme="@style/LightTheme.NoActionBar">
+            android:theme="@style/LightTheme">
         </activity>
         <activity
             android:name=".activities.Setup"
