--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/LightTheme">
+        android:theme="@style/LightTheme"
+        android:name="android.support.multidex.MultiDexApplication">
         <activity
             android:name=".activities.MainActivity"
             android:configChanges="keyboardHidden|orientation"
