--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0-alpha6'
+        classpath ('com.android.tools.build:gradle:2.2.0-alpha6') {
+            force = true
+        }
     }
 }
 
