Updated travis and build settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,13 @@ before_install: chmod +x gradlew
 
 notifications:
     email: false
+
+script:
+  - jdk_switcher use oraclejdk8
+
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
