--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,13 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:recyclerview-v7:24.1.1'
-    compile 'com.android.support:design:24.1.1'
-    compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.github.paolorotolo:appintro:3.3.0'
-    compile 'com.google.android.gms:play-services:9.2.1'
+    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.3'
+    compile 'com.marshalchen.ultimaterecyclerview:library:0.7.0'
 }
