--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
 
         <activity
             android:name=".activities.MainActivity"
-            android:configChanges="keyboardHidden|orientation"
+            android:configChanges="keyboardHidden"
             android:label="@string/app_name"
             android:theme="@style/LightTheme">
         </activity>
