--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         targetSdkVersion 25
         versionCode 7
         versionName "0.4.0"
+        multiDexEnabled = true
     }
     buildTypes {
         debug {
