--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.1.2-5'
     repositories {
         jcenter()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:2.4.0-alpha7') {
+        classpath('com.android.tools.build:gradle:3.0.0-alpha3') {
             force = true
         }
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
