--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ buildscript {
             force = true
         }
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath ('com.google.firebase:firebase-plugins:1.1.0') {
+            exclude group: 'com.google.guava', module: 'guava-jdk5'
+        }
+
     }
 }
 
