--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,12 @@ buildscript {
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
+        google()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:3.0.0-alpha3') {
+        classpath('com.android.tools.build:gradle:3.0.1') {
             force = true
         }
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -18,6 +18,7 @@ allprojects {
     repositories {
         jcenter()
         mavenCentral()
+        google()
     }
 }
 
