Updated build process

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,10 @@ android {
     lintOptions {
         abortOnError false
     }
+    dexOptions {
+        javaMaxHeapSize "1g"
+        preDexLibraries = false
+    }
 }
 
 dependencies {
