--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionCode 11
         versionName "0.5.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "TBA_KEY", TBA_KEY)
     }
     testOptions {
         unitTests.all {
@@ -31,6 +32,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
     }
     lintOptions {
         abortOnError false
@@ -49,7 +51,7 @@ dependencies {
     compile 'com.android.support:design:27.0.2'
     compile 'com.android.support:cardview-v7:27.0.2'
     compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.google.android.gms:play-services-ads:11.6.2'
+    compile 'com.google.android.gms:play-services-ads:11.8.0'
     compile 'com.github.paolorotolo:appintro:3.3.0'
     compile 'jp.wasabeef:recyclerview-animators:2.2.3'
     compile 'com.marshalchen.ultimaterecyclerview:library:0.7.0'
