--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,9 @@
 apply plugin: 'com.android.application'
-apply from: "$project.rootDir/tools/pmd.gradle"
-apply from: "$project.rootDir/tools/findbugs.gradle"
-apply from: "$project.rootDir/tools/checkstyle.gradle"
-apply from: "$project.rootDir/tools/jacoco.gradle"
-
-
-// Get keys from file not contained in git
-def getProps(String propName) {
-    def propsFile = rootProject.file('secrets.properties')
-    if (propsFile.exists()) {
-        def props = new Properties()
-        props.load(new FileInputStream(propsFile))
-        return props[propName]
-    } else {
-        return ""
-    }
-}
+apply plugin: 'jacoco'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.aquamorph.frcmanager"
@@ -28,7 +12,6 @@ android {
         versionCode 11
         versionName "0.5.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        buildConfigField("String", "TBA_KEY", getProps("TBA_KEY"))
     }
     testOptions {
         unitTests.all {
@@ -48,7 +31,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-
     }
     lintOptions {
         abortOnError false
@@ -56,40 +38,41 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    testImplementation "org.robolectric:robolectric:3.2.2"
-    testImplementation 'org.assertj:assertj-core:1.7.1'
-    testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:animated-vector-drawable:27.0.2'
-    implementation 'com.android.support:support-v13:27.0.2'
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.android.support:cardview-v7:27.0.2'
-    implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.github.paolorotolo:appintro:3.3.0'
-    implementation 'jp.wasabeef:recyclerview-animators:2.2.3'
-    implementation 'com.marshalchen.ultimaterecyclerview:library:0.7.0'
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    // Android runner and rules support
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test:rules:1.0.1'
-
-    // Espresso support
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-
-    // add this for intent mocking support
-    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.1'
-
-    // add this for webview testing support
-    androidTestImplementation 'com.android.support.test.espresso:espresso-web:3.0.1'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    testCompile "org.robolectric:robolectric:3.2.2"
+    testCompile 'org.assertj:assertj-core:1.7.1'
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support:animated-vector-drawable:27.0.2'
+    compile 'com.android.support:support-v13:27.0.2'
+    compile 'com.android.support:recyclerview-v7:27.0.2'
+    compile 'com.android.support:design:27.0.2'
+    compile 'com.android.support:cardview-v7:27.0.2'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.google.android.gms:play-services-ads:11.6.2'
+    compile 'com.github.paolorotolo:appintro:3.3.0'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.3'
+    compile 'com.marshalchen.ultimaterecyclerview:library:0.7.0'
 }
 
+task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
+
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+
+    def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*']
+    def debugTree = fileTree(dir: "${buildDir}/intermediates/classes/debug", excludes: fileFilter)
+    def mainSrc = "${project.projectDir}/src/main/java"
+
+    sourceDirectories = files([mainSrc])
+    classDirectories = files([debugTree])
+    executionData = fileTree(dir: "$buildDir", includes: [
+            "jacoco/testDebugUnitTest.exec",
+            "outputs/code-coverage/connected/*coverage.ec"
+    ])
+}
 repositories {
     mavenCentral()
 }
-
