--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,6 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    testImplementation "org.robolectric:robolectric:3.2.2"
     testImplementation 'org.assertj:assertj-core:1.7.1'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:27.0.2'
@@ -67,11 +66,7 @@ dependencies {
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.github.paolorotolo:appintro:3.3.0'
-    implementation 'jp.wasabeef:recyclerview-animators:2.2.3'
-    implementation 'com.marshalchen.ultimaterecyclerview:library:0.7.0'
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.github.apl-devs:appintro:v4.2.2'
 
     // Android runner and rules support
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -91,5 +86,6 @@ dependencies {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
