--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,13 @@ android {
             testCoverageEnabled true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "boolean", "APP_DEBUG", "true"
         }
         release {
             testCoverageEnabled false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "boolean", "APP_DEBUG", "false"
         }
 
     }
