--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
             android:theme="@style/LightTheme">
         </activity>
         <activity
+            android:name=".activities.MatchSummaryActivity">
+        </activity>
+        <activity
             android:name=".activities.Setup"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
