Changed formatting for secret

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -12,7 +12,7 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '11'
-    - run: 'echo 'TBA_KEY=\"${TBA_KEY}\"' > secrets.properties'
+    - run: echo 'TBA_KEY=\"${TBA_KEY}\"' > secrets.properties
       shell: bash
       env:
         TBA_KEY: ${{secrets.TBA_KEY}}
