--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,11 +15,11 @@ def getProps(String propName) {
 }
 
 android {
-    compileSdkVersion 34
     defaultConfig {
         applicationId "com.aquamorph.frcmanager"
         minSdkVersion 19
         targetSdkVersion 34
+        compileSdk 34
         versionCode 27
         versionName "2024.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -32,18 +32,15 @@ android {
         debug {
             testCoverageEnabled true
             minifyEnabled false
-            zipAlignEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "boolean", "APP_DEBUG", "true"
         }
         release {
             testCoverageEnabled false
             minifyEnabled false
-            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "boolean", "APP_DEBUG", "false"
         }
-
     }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -54,7 +51,6 @@ android {
         abortOnError false
     }
     namespace 'com.aquamorph.frcmanager'
-    buildToolsVersion '34.0.0'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
